Attempt to fix some height / scrollbar issues on mobile

--- a/web/src/css/base/common.css
+++ b/web/src/css/base/common.css
@@ -1,4 +1,5 @@
 body {
+    min-height: 100vh;
     margin: 0;
     padding: 8px;
     box-sizing: border-box;
