--- a/web/src/css/mobile/common.css
+++ b/web/src/css/mobile/common.css
@@ -1,7 +1,3 @@
-body {
-    min-height: 100vh;
-}
-
 input {
     width: auto;
     min-width: 0;
